# bybit-telegram-bot

./: .dockerignore  .env.example  .env.minimal  .gitignore  .mirror_monitors_added  .monitor_idusdt_mirror  .preserve_mirror_monitors  .reload_enhanced_monitors.signal  AI_MARKET_INSIGHTS_ENHANCEMENT.md  ALERTS_AND_BREAKEVEN_FIX_SUMMARY.md  ALERTS_IMPLEMENTATION.md  ALERT_MESSAGES_UPDATE_SUMMARY.md  ALERT_SYSTEM_VERIFICATION_SUMMARY.md  ANALYTICS_DASHBOARD_COMPLETE.md  ANALYTICS_DASHBOARD_FIXED.md  BACKUP_FREQUENCY_REDUCTION_SUMMARY.md  BOT_STARTUP_FIXES_SUMMARY.md  CHAT_ID_FIX_SUMMARY.md  CHECKPOINT_11.md  CHECKPOINT_12_PERFORMANCE_OPTIMIZATION_COMPLETE.md  CLAUDE.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_MONITOR_FIX_SUMMARY.md  COMPREHENSIVE_VERIFICATION_REPORT.md  CONSERVATIVE_APPROACH_CLARIFICATION.md  CONSERVATIVE_ONLY_COMPLETE_SUMMARY.md  CRITICAL_FIXES_APPLIED.md  DEPLOYMENT_GUIDE.md  DIAGNOSTIC_REPORT.md  Directory Structure.docx  Dockerfile  ENHANCED_ALERT_SYSTEM_DOCUMENTATION.md  ENHANCED_TP_DETECTION_IMPLEMENTATION.md  ERROR_FIXES_SUMMARY.md  EXECUTION_SPEED_OPTIMIZATION_SUMMARY.md  EXISTING_POSITIONS_FIX_GUIDE.md  EXTERNAL_ORDER_PROTECTION_REMOVAL_GUIDE.md  EXTERNAL_ORDER_PROTECTION_REMOVAL_SUMMARY.md  EXTREME_PERFORMANCE_400_TRADES.md  FINAL_36_MONITORS_SUMMARY.md  (+2616 more)
alerts/: __init__.py  alert_manager.py  alert_types.py  daily_reports.py  position_alerts.py  price_alerts.py  risk_alerts.py  storage.py  volatility_alerts.py
backup_comprehensive_20250728_212001/: CLAUDE.md  README.md  bybit_bot_dashboard_v4.1_enhanced.pkl  constants.py  monitor_data_full.json  monitor_summary.json  monitor_tasks.json  settings.py  statistics.json
cache/: aggregated_sentiment.json  collection_history.json  platform_sentiments.json
clients/: ai_client.py  bybit_client.py  bybit_helpers.py
config/: __init__.py  constants.py  image_settings.py  settings.py  settings.py.backup_20250709_094140
dashboard/: __init__.py  components.py  generator_analytics.py  generator_analytics_compact.py  generator_analytics_compact_fixed.py  generator_v2.py  generator_v2.py.backup_perf_20250709_145532  keyboards_analytics.py  keyboards_v2.py.backup_perf_20250709_145532  lazy_components.py  mobile_layouts.py  models.py
data/: bybit_bot_dashboard_v4.1_enhanced.pkl  enhanced_trade_history.json  enhanced_trade_history_backup.json
docs/: AI_MARKET_INSIGHTS_IMPROVEMENTS.md  AUTO_REBALANCER_REMOVAL.md  AUTO_REBALANCER_REMOVAL_COMPLETE.md  BREAKEVEN_AND_REBALANCING_FIXES.md  CHECKPOINT_1.md  CLOSURE_VERIFICATION_RESULTS.md  COMPREHENSIVE_BOT_GUIDE.md  COMPREHENSIVE_CLEANUP_SUMMARY.md  CONSERVATIVE_APPROACH_DETAILED_EXPLANATION.md  CONSERVATIVE_FLOW_FIX.md  CONSERVATIVE_REBALANCER_IMPLEMENTATION.md  CONSERVATIVE_SUMMARY_UPDATE.md  CRITICAL_FIXES_IMPLEMENTED.md  DECIMAL_PRECISION_FIX.md  DUAL_APPROACH_FIX_SUMMARY.md  ENHANCED_TRADE_MESSAGES.md  FAST_APPROACH_FIX_SUMMARY.md  FAST_APPROACH_FIX_SUMMARY_NEW.md  FAST_APPROACH_ORDER_FIX.md  FUTURE_TRADES_SETUP.md  GGSHOT_COLOR_BOX_UPDATE.md  GGSHOT_ENHANCEMENTS_COMPLETED.md  GGSHOT_LABEL_UPDATE.md  GGSHOT_LONG_SHORT_GUIDE.md  GGSHOT_ROBUSTNESS_REPORT.md  GGSHOT_STREAMLINED_FLOW.md  GGSHOT_USER_ISSUE_FIX.md  IMPROVEMENT_RECOMMENDATIONS.md  INDIVIDUAL_POSITION_CLOSE.md  KEYBOARD_CALLBACKS_FIXED.md  LEVERAGE_FIX_SUMMARY.md  LEVERAGE_WARNING_SILENCED.md  (+29 more)
(+934 files in other folders)
