[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bybit-telegram-bot"
version = "4.1.0"
description = "A sophisticated Telegram bot for automated cryptocurrency trading on Bybit exchange"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bybit Telegram Bot Contributors"},
]
maintainers = [
    {name = "Bybit Telegram Bot Contributors"},
]
requires-python = ">=3.9"
keywords = [
    "bybit",
    "telegram",
    "bot",
    "trading",
    "cryptocurrency",
    "crypto",
    "automated-trading",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "python-telegram-bot>=20.0,<21.0",
    "pybit>=5.0,<6.0",
    "aiohttp>=3.8.0,<4.0",
    "httpx>=0.24.0,<1.0",
    "python-dotenv>=1.0.0,<2.0",
    "openai>=1.0.0,<2.0",
    "pillow>=9.0.0,<11.0",
    "pandas>=2.0.0,<3.0",
    "numpy>=1.24.0,<2.0",
    "requests>=2.28.0,<3.0",
    "python-dateutil>=2.8.0,<3.0",
    "colorlog>=6.7.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0",
    "pytest-asyncio>=0.21.0,<1.0",
    "pytest-cov>=4.0.0,<5.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
social = [
    "praw>=7.7.0",
    "tweepy>=4.14.0",
    "google-api-python-client>=2.0",
    "discord.py>=2.3.0",
    "textblob>=0.17.1",
    "vaderSentiment>=3.3.2",
    "beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/bybit-telegram-bot"
Documentation = "https://github.com/yourusername/bybit-telegram-bot/wiki"
Repository = "https://github.com/yourusername/bybit-telegram-bot.git"
Issues = "https://github.com/yourusername/bybit-telegram-bot/issues"

[project.scripts]
bybit-bot = "main:main"

[tool.setuptools]
packages = ["alerts", "clients", "config", "dashboard", "execution", "handlers", "helpers", "market_analysis", "risk", "shared", "social_media", "utils"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.pkl", "*.md"]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | env
  | build
  | dist
  | archive
  | backups
)/
'''

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["venv", "env", "archive", "backups"]